--- a/CSS-Flexbox/css-flexbox_navigation/css/styles.css
+++ b/CSS-Flexbox/css-flexbox_navigation/css/styles.css
@@ -29,3 +29,13 @@ ul {
   padding: 5px 14px;
   border-radius: 5px;
 }
+
+.navigation__menu {
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
