--- a/CSS-Flexbox/css-flexbox_profile/css/styles.css
+++ b/CSS-Flexbox/css-flexbox_profile/css/styles.css
@@ -19,6 +19,14 @@ h2 {
   color: #3f0097;
 }
 
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
 .profile__image {
   object-fit: cover;
   border-radius: 999px;
@@ -28,6 +36,9 @@ h2 {
 }
 
 .tech-stack__list {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
   list-style: none;
   padding-left: 0;
 }
