--- a/CSS-Strukture/css-structure_custom-properties/css/styles.css
+++ b/CSS-Strukture/css-structure_custom-properties/css/styles.css
@@ -1,3 +1,7 @@
+:root {--color-foam: white;
+ --color-granite: dark grey;
+--color-nemo: orange;
+}
 *,
 *::before,
 *::after {
@@ -17,7 +21,7 @@ header {
 
 h1 {
   text-align: center;
-  color: white;
+  color: var(--color-foam);
   line-height: 1.4;
   margin: 0;
   letter-spacing: 0.025em;
@@ -30,7 +34,7 @@ h2 {
 }
 
 strong {
-  color: #ff4a11;
+   color: var(--color-nemo);
 }
 
 section {
@@ -58,12 +62,12 @@ figure {
   gap: 10px;
   margin: 0;
   padding: 10px;
-  background-color: #ff4a11ff;
+  background-color: var(--color-nemo);
   border-radius: 4px;
 }
 
 figcaption {
-  color: rgb(255 255 255);
+   color: var(--color-foam);
 }
 
 nav {
@@ -77,8 +81,8 @@ a {
   font-size: smaller;
   padding: 8px;
   border-radius: 4px;
-  background-color: hsl(14 100% 53%);
-  color: #fff;
+  background-color: var(--color-nemo));
+  color: var(--color-foam);
 }
 
 a:hover,
@@ -89,12 +93,12 @@ a:focus-visible {
 
 mark {
   background-color: rgb(255 74 17);
-  color: #ffffff;
+   color: var(--color-foam);
   border-radius: 4px;
   letter-spacing: 0.025em;
 }
 
 ::selection {
-  background-color: #252629;
-  color: #ff4a11;
+  background-color: var(--color-granite);
+  color: var(--color-nemo);
 }
