--- a/CSS-Strukture/css-structure_taco-truck/theme.css
+++ b/CSS-Strukture/css-structure_taco-truck/theme.css
@@ -1,13 +1,13 @@
 :root {
   --body-bg: #fddcd2;
 
-  --header-bg: #ff4a11;
-  --header-text: #3f0097;
+  --header-bg: black;
+  --header-text: pink;
 
-  --main-bg: ##fddcd2;
-  --main-text: #ff4a11;
-  --main-title-bg: #3f0097;
+  --main-bg: apri;
+  --main-text: black;
+  --main-title-bg: pink;
 
-  --card-bg: #8336ff7b;
+  --card-bg: light green;
   --card-text: #201e1d;
 }
