--- a/CSS-Grid/css-grid_payment-cards/css/styles.css
+++ b/CSS-Grid/css-grid_payment-cards/css/styles.css
@@ -31,6 +31,9 @@ body {
 }
 
 .cards {
+  display: grid;
+  grid-template: 1fr / 3fr 3fr 3fr;
+  gap: 3rem;
   margin: 0 auto;
   padding: 2rem;
   max-width: 50rem;
