--- a/CSS-Grid/css-grid_fish-cards/css/styles.css
+++ b/CSS-Grid/css-grid_fish-cards/css/styles.css
@@ -31,6 +31,8 @@ body {
 .fish {
   width: 20rem;
   margin: 2rem auto;
+  display: grid;
+  grid-template: 1fr 1fr 1fr / 2fr 1fr
 
   /* Add styles to the container */
 }
