--- a/CSS-Basics/css-basics_combined-users/css/styles.css
+++ b/CSS-Basics/css-basics_combined-users/css/styles.css
@@ -64,6 +64,23 @@ li {
   margin: 0;
 }
 
+aside .user {
+max-width: 250px;
+padding: 12px;
+border-radius: 4px;
+}
+
+aside .name {
+  font-size: 16px;
+}
+aside .bio {
+  font-size: 12px;
+  margin: 6px 0;
+}
+
+aside .location {
+  font-size: 10px;
+}
 /*
   Part 1
 
