--- a/CSS-Basics/css-basics_combined-users/css/styles.css
+++ b/CSS-Basics/css-basics_combined-users/css/styles.css
@@ -112,3 +112,11 @@ aside .location {
 
   💡 You can use the display property to hide elements.
 */
+
+ul .bio {
+  display: none;
+}
+ul .location {
+  color: darkslategray;
+  text-align: left;
+}
