--- a/React-Styled-Components/react-styled-components_lotr-app-styling/design-resources/variables.css
+++ b/React-Styled-Components/react-styled-components_lotr-app-styling/design-resources/variables.css
@@ -1,21 +1,3 @@
-import { createGlobalStyle } from "styled-components";
-import { Lora } from "next/font/google";
-
-const lora = Lora({
-  subsets: ["latin"],
-  style: ["normal", "italic"],
-});
-
-export const GlobalStyle = createGlobalStyle`
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: system-ui,  
-  }
 :root {
   /* Color styles */
   --color-earth: #282828;
@@ -23,7 +5,7 @@ export const GlobalStyle = createGlobalStyle`
   --color-smoke: #d4d1cd;
 
   /* Font styles */
-  --font-family: ${lora.style.fontFamily}, serif;
+  --font-family: serif;
   /*
     use like:
     font: var(--font-body);
@@ -47,4 +29,4 @@ export const GlobalStyle = createGlobalStyle`
   --box-shadow-book--hover: 0 6px 11px -2px rgba(0, 0, 0, 0.12),
     0 8px 7px -4px rgba(0, 0, 0, 0.09), 0 17px 11px -8px rgba(0, 0, 0, 0.09),
     0 24px 15px -12px rgba(0, 0, 0, 0.09), 0 4px 15px 0 rgba(0, 0, 0, 0.05);
-}`;
+}
